--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -13,3 +13,14 @@
       address       = "New York, NY",
       year          = "2010",
 }
+
+@book{Rossi:976471,
+      author        = "Rossi, Leonardo and Fischer, Peter and Rohe, Tilman and
+                       Wermes, Norbert",
+      title         = "{Pixel detectors: from fundamentals to applications}",
+      publisher     = "Springer",
+      address       = "Berlin",
+      series        = "Particle Acceleration and Detection",
+      year          = "2006",
+      url           = "http://cds.cern.ch/record/976471",
+}
