[Silicon.tex] more text written on the spatial resolution for binary and binary+charge sharing.

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -24,3 +24,15 @@
       year          = "2006",
       url           = "http://cds.cern.ch/record/976471",
 }
+
+@article{Belau:1983eh,
+      author         = "Belau, E. and others",
+      title          = "{The Charge Collection in Silicon Strip Detectors}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "214",
+      year           = "1983",
+      pages          = "253",
+      doi            = "10.1016/0167-5087(83)90591-4",
+      reportNumber   = "MPI-PAE/Exp El-114",
+      SLACcitation   = "%%CITATION = NUIMA,214,253;%%"
+}
