--- a/thesis_defs.sty
+++ b/thesis_defs.sty
@@ -23,10 +23,10 @@
 }
 
 % Particles
-\newcommand*{\KoS}{\ensuremath{K_{S}^{0}}\xspace}
+%\newcommand*{\KoS}{\ensuremath{K_{S}^{0}}\xspace}
 
 % Kinematics
-\newcommand*{\pTmiss}{\ensuremath{p_{\text{T}}^{\text{miss}}}\xspace}
+%\newcommand*{\pTmiss}{\ensuremath{p_{\text{T}}^{\text{miss}}}\xspace}
 
 % If you use the siunitx package include any decimal number in \SI or \num
 % e.g. \num{2.3} \SI{2.3E4}{\GeV}. The decimal point will be replaced
