--- a/include/planning.tex
+++ b/include/planning.tex
@@ -1,45 +1,57 @@
-\chapter{Planning for the thesis writing}
+% \chapter{Structure of the thesis}
+
 
 \begin{enumerate}
 
-\item Abstract
-
-\item Introduction: logic line, link between different chapters.
-
-\item CLIC
+\item Introduction
+\item CLIC: Compact Linear Collider
   \begin{itemize}
-  \item Introduction: motivation (post-LHC)
+  \item Motivation (post-LHC)
   \item Accelerator: two-beam acceleration
-  \item Beam-induced backgrounds
-  \item CLIC detector model for simulations:
-    \begin{itemize} 
-    \item detector model/geometry, tracking detectors (vertex, tracker), Calorimeters and yoke, very forward region (LumiCal, BeamCal), beam pipe, magnetic field.
+  \item CLIC detector
+    \begin{itemize}
+    \item Detector concept
+    \item Vertex/tracking detectors for CLIC: Goal, requirements,
+      design, technical challenges (cooling/mechanics) 
+    \item Beam induced backgrounds
+    \item Radiation damage in the vertex detector
     \end{itemize}
-  \item Radiation dammage in silicon detectors.
-  \item Detector simulation software
+  \item Detector simulation software (?)
   \end{itemize}
 
-\item Vertex detector
-  \begin{itemize} 
-  \item Goals
-  \item Design
-  \item Technical challenges: cooling, mechanics.
+\item Semiconductor detectors for radiation detection
+  \begin{itemize}
+  \item Silicon structure
+  \item Signal formation: doping, pn-junction, the
+    reverse-biased diode, pixel (strip) detectors
+  \item Charge collection: drift and diffusion, induced charge (Ramo's
+    theorem)
+  \item Signal acquisition and electronic noise
   \end{itemize}
 
-\item Silicon theory
+\item Hybrid pixel detectors and calibration:
+  \begin{itemize}
+  \item Readout ASICS: Timepix, Timepix3 (CLICpix)
+  \item Test-pulse, source calibration 
+  \item Energy deposition and comparison to \textsc{Geant4} and Bichsel models.
+  \end{itemize}
 
-\item Calibration
+\item Thin sensors studies
+  \begin{itemize}
+  \item Samples, sensors geometries
+  \item Test-beam setup: EUDET telescope, Timepix3 telescope
+  \item Reconstruction software
+  \item Simulation setups and validation: \textsc{Geant4} (Allpix), TCAD 
+  \item Edge optimisation (comparison to TCAD).
+  \end{itemize}
 
-\item Test-beam analysis and simulation validation
 
-\item Active-edge sensors
+\item Extrapolation of results for smaller pixel sizes: input for the
+  new digitisers for physics simulations
 
-\item Timepix3 telescope/devices
-
-\item Flavour-tagging performance
-
-\item RD53 simulation framework
-
+\item Flavour-tagging performance (?)
+\item RD53 simulation framework (?)
 \item Conclusions
-
+  
 \end{enumerate}
+
