Added the name of the active-edge assemblies.

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -200,6 +200,7 @@
 \input{include/planning}
 \input{include/Silicon}
 \input{include/Calibration}
+\input{include/ActiveEdge}
 % Uncomment the following command to get references per chapter.
 % Put it inside the file or change \include to \input if you do not want the references
 % on a separate page
