--- a/include/planning.tex
+++ b/include/planning.tex
@@ -6,20 +6,15 @@
 \item Introduction
 \item CLIC: Compact Linear Collider
   \begin{itemize}
-  \item Motivation (post-LHC)
-  \item Accelerator: two-beam acceleration
-  \item CLIC detector
-    \begin{itemize}
-    \item Detector concept
-    \item Vertex/tracking detectors for CLIC: Goal, requirements,
-      design, technical challenges (cooling/mechanics) 
-    \item Beam induced backgrounds
-    \item Radiation damage in the vertex detector
-    \end{itemize}
+  \item Motivation (post-LHC), Accelerator: two-beam acceleration, CLIC detector
+  \item Detector concept, Vertex/tracking detectors for CLIC: Goal, requirements,
+    design, technical challenges (cooling/mechanics), Beam induced
+    backgrounds, Radiation damage in the vertex detector
+  \item Include flavour-tagging plots to make a motivation
   \item Detector simulation software (?)
   \end{itemize}
-
-\item Semiconductor detectors for radiation detection
+  
+\item Semiconductor detectors for radiation detection: theory, TCAD, \textsc{Geant4}
   \begin{itemize}
   \item Silicon structure
   \item Signal formation: doping, pn-junction, the
