--- a/include/ActiveEdge.tex
+++ b/include/ActiveEdge.tex
@@ -52,3 +52,28 @@
     \end{tabular}
   \end{minipage}
 \end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/20umEdge_float_GR_withText.png}
+    \caption{20~\micron edge: Floating guard ring}
+    \label{fig:GuardRingLayout_20_float_GR}
+  \end{subfigure}\hfill
+  \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/20umEdge_GND_GR_withText.png}
+    \caption{20~\micron edge: GND guard ring}
+    \label{fig:GuardRingLayout_20_GND_GR}
+  \end{subfigure}\hfill
+  \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/50umEdge_GND_GR_withText.png}
+    \caption{50~\micron edge: GND guard ring}
+    \label{fig:GuardRingLayout_50_GND_GR}
+  \end{subfigure}
+  \label{fig:GuardRingLayout}
+\end{figure}
