--- a/include/ActiveEdge.tex
+++ b/include/ActiveEdge.tex
@@ -57,21 +57,21 @@
   \centering
   \begin{subfigure}[b]{0.33\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/20umEdge_float_GR_withText.png}
+    \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/20umEdge_float_GR_withText.png}}
     \caption{20~\micron edge: Floating guard ring}
     \label{fig:GuardRingLayout_20_float_GR}
   \end{subfigure}\hfill
   \centering
   \begin{subfigure}[b]{0.33\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/20umEdge_GND_GR_withText.png}
+      \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/20umEdge_GND_GR_withText.png}}
     \caption{20~\micron edge: GND guard ring}
     \label{fig:GuardRingLayout_20_GND_GR}
   \end{subfigure}\hfill
   \centering
   \begin{subfigure}[b]{0.33\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/50umEdge_GND_GR_withText.png}
+    \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/50umEdge_GND_GR_withText.png}}
     \caption{50~\micron edge: GND guard ring}
     \label{fig:GuardRingLayout_50_GND_GR}
   \end{subfigure}
